--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10", "3.11", "3.12"]
-    #runs-on: ubuntu-latest
+        os:  [ubuntu-latest] # [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.12"] # ["3.10", "3.11", "3.12"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -19,7 +18,6 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          #python-version: '3.9'
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
