--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,19 @@
 name: CI
 
-# TODO: on push on feature or bugfix branches and on pull requests on develop and main branches
-on: [push, pull_request]
+on:  
+  push:
+    branches: ["feature/**", "bugfix/**"]
+  pull_request:
+    branches: ["develop", "main"]
 
 jobs:
   test:
-    name: Test
+    name: Test on ${{ matrix.os }} - Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:  [ubuntu-latest] # [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.12"] # ["3.10", "3.11", "3.12"]
+        os:  [ubuntu-latest] # Add windows-latest, macos-latest if needed
+        python-version: ["3.12"] # Add multiple versions in needed ["3.10", "3.11", "3.12"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -19,12 +22,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'  # Enables caching for pip dependencies
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install flake8 pytest pytest-cov
+
+      - name: Run flake8 linting
+        run: flake8
 
       - name: Run tests with coverage
         run: |
@@ -37,11 +44,52 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}
-        uses: codecov/test-results-action@v1
+      - name: Upload test results as artifacts
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          name: test-reports
+          path: junit.xml
 
-      - name: Run flake8 linting
-        run: flake8
+  security_scan:
+    name: Run CodeQL Analysis
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+
+  build:
+    name: Build & Push Docker Image to GHCR
+    runs-on: ubuntu-latest
+    needs: test  # Runs only if tests pass
+    permissions:
+      packages: write  # Required to push to GHCR
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build and tag Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
+          docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+
+      - name: Push Docker image to GHCR
+        run: |
+          docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
+          docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+      
