--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,22 +50,33 @@ jobs:
           name: test-reports
           path: junit.xml
 
-  security_scan:
-    name: Run CodeQL Analysis
-    runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - name: Run Trivy Security Scan (Source Code)
+        uses: aquasecurity/trivy-action@master
         with:
-          languages: python
+          scan-type: "fs"
+          ignore-unfixed: true
+          exit-code: 1
+          severity: "CRITICAL,HIGH"
+      
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+  # security_scan:
+  #   name: Run CodeQL Analysis
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     security-events: write
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+
+  #     - name: Initialize CodeQL
+  #       uses: github/codeql-action/init@v3
+  #       with:
+  #         languages: python
+
+  #     - name: Perform CodeQL Analysis
+  #       uses: github/codeql-action/analyze@v3
+
+  
 
   build:
     name: Build & Push Docker Image to GHCR
@@ -81,15 +92,25 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        #run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
-      - name: Build and tag Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
-          docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
 
-      - name: Push Docker image to GHCR
+      - name: Build and Push Docker Image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
-          docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+          docker build -t ghcr.io/${{ github.repository }}/my-app:latest .
+          docker push ghcr.io/${{ github.repository }}/my-app:latest
+
+      # PROVARE COSì per vedere se funziona con repo privato. PErò poi usare quelle sotto, a TAGGARE!!! SUBITO!. altrimenti fare check if se repo e priato o pubblico ma non professionale come cosa
+
+      # - name: Build and tag Docker image
+      #   run: |
+      #     docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
+      #     docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+        
+
+      # - name: Push Docker image to GHCR
+      #   run: |
+      #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
+      #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
       
