--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,36 +57,19 @@ jobs:
           ignore-unfixed: true
           exit-code: 1
           severity: "CRITICAL,HIGH"
-      
-
-  # security_scan:
-  #   name: Run CodeQL Analysis
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     security-events: write
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Initialize CodeQL
-  #       uses: github/codeql-action/init@v3
-  #       with:
-  #         languages: python
-
-  #     - name: Perform CodeQL Analysis
-  #       uses: github/codeql-action/analyze@v3
-
-  
 
   build:
     name: Build & Push Docker Image to GHCR
     runs-on: ubuntu-latest
     needs: test  # Runs only if tests pass
     permissions:
+      contents: read  # Needed for actions/checkout
       packages: write  # Required to push to GHCR
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v3
