--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,22 +75,24 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        #run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
-
-      - name: Build and Push Docker Image
+      # FOR PRIVATE REPO
+      - name: Build and tag Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/my-app:latest .
-          docker push ghcr.io/${{ github.repository }}/my-app:latest
+          docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:latest .
+          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
 
-      # PROVARE COSì per vedere se funziona con repo privato. PErò poi usare quelle sotto, a TAGGARE!!! SUBITO!. altrimenti fare check if se repo e priato o pubblico ma non professionale come cosa
+      - name: Push Docker image to GHCR
+        run: |
+          docker push ghcr.io/${{ github.repository }}/demo-flask-app:latest
+          docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
 
+      # FOR PUBLIC REPO
       # - name: Build and tag Docker image
       #   run: |
       #     docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
       #     docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
-        
 
       # - name: Push Docker image to GHCR
       #   run: |
