Fixed docker tag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Build and tag Docker image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:latest .
-          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:latest ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
 
       - name: Run Trivy Security Scan (Docker Image)
         uses: aquasecurity/trivy-action@master
@@ -117,4 +117,3 @@ jobs:
       #   run: |
       #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
       #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
-      
