--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,29 +59,36 @@ jobs:
           severity: "CRITICAL,HIGH"
 
   build:
-    name: Build & Push Docker Image to GHCR
+    name: Build Docker Image
     runs-on: ubuntu-latest
     needs: test  # Runs only if tests pass
-    permissions:
-      contents: read  # Needed for actions/checkout
-      packages: write  # Required to push to GHCR
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        # with:
-        #   fetch-depth: 0
 
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
       # FOR PRIVATE REPO
       - name: Build and tag Docker image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:latest .
-          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:latest ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
+#  docker tag ghcr.io/${{ github.repository }}/demo-flask-app:latest ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
+
+      # FOR PUBLIC REPO
+      # - name: Build and tag Docker image
+      #   run: |
+      #     docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
+      #     docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+
+
+
+
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+
+
 
       - name: Run Trivy Security Scan (Docker Image)
         uses: aquasecurity/trivy-action@master
@@ -108,11 +115,6 @@ jobs:
           docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
 
       # FOR PUBLIC REPO
-      # - name: Build and tag Docker image
-      #   run: |
-      #     docker build -t ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest .
-      #     docker tag ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
-
       # - name: Push Docker image to GHCR
       #   run: |
       #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
