--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,24 @@
 name: CI
 
-on:  
-  push:
-    branches: ["feature/**", "bugfix/**"]
-  pull_request:
-    branches: ["develop", "main"]
+on: [push, pull_request]
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }} - Python ${{ matrix.python-version }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os:  [ubuntu-latest] # Add windows-latest, macos-latest if needed
-        python-version: ["3.12"] # Add multiple versions in needed ["3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'  # Enables caching for pip dependencies
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install flake8 pytest pytest-cov
-
-      - name: Run flake8 linting
-        run: flake8
 
       - name: Run tests with coverage
         run: |
@@ -44,33 +31,11 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Upload test results as artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
         with:
-          name: test-reports
-          path: junit.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Run Trivy Security Scan (Source Code)
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: "fs"
-          ignore-unfixed: true
-          exit-code: 1
-          severity: "CRITICAL,HIGH"
-
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    needs: test  # Runs only if tests pass
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and tag Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:latest .
-
-# FOR PUBLIC REPO => ${{ github.repository }}
+      - name: Run flake8 linting
+        run: flake8
