fixed docker tag

--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Build and tag Docker image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} .
+          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
           docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:latest
-          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }} ghcr.io/${{ github.repository }}/demo-flask-app:latest
 
           - name: Run Trivy Security Scan (Docker Image)
           uses: aquasecurity/trivy-action@master
