--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -3,7 +3,7 @@ name: Push Docker Image
 on:
   push:
     tags:
-      - "v*.*.*"  # Runs only on versioned tags
+      - "v*"  # Runs only on versioned tags
 
 jobs:
   push:
@@ -29,6 +29,7 @@ jobs:
         run: |
           docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} .
           docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:latest
+          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
 
       - name: Run Trivy Security Scan (Docker Image)
         uses: aquasecurity/trivy-action@master
@@ -52,6 +53,7 @@ jobs:
         run: |
           docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }}
           docker push ghcr.io/${{ github.repository }}/demo-flask-app:latest
+          docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
 
     # FOR PUBLIC REPO
       # - name: Push Docker image to GHCR
