Added k8s manifests and helm templates; added deployment via argocd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,6 @@ jobs:
 
       - name: Build and tag Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:latest .
+          docker build -t ghcr.io/${{ github.repository }}/flask-app:latest .
 
 # FOR PUBLIC REPO => ${{ github.repository }}
