--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -27,15 +27,15 @@ jobs:
 
       - name: Build and tag Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} .
-          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:latest
-          docker tag ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
+          docker build -t ghcr.io/${{ github.repository }}/flask-app:${{ env.VERSION }} .
+          docker tag ghcr.io/${{ github.repository }}/flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/flask-app:latest
+          docker tag ghcr.io/${{ github.repository }}/flask-app:${{ env.VERSION }} ghcr.io/${{ github.repository }}/flask-app:${{ github.sha }}
 
       - name: Run Trivy Security Scan (Docker Image)
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: "image"
-          image-ref: "ghcr.io/${{ github.repository }}/demo-flask-app:latest"
+          image-ref: "ghcr.io/${{ github.repository }}/flask-app:latest"
           ignore-unfixed: true
           exit-code: 1
           severity: "CRITICAL,HIGH"
@@ -51,12 +51,12 @@ jobs:
 
       - name: Push Docker image to GHCR
         run: |
-          docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ env.VERSION }}
-          docker push ghcr.io/${{ github.repository }}/demo-flask-app:latest
-          docker push ghcr.io/${{ github.repository }}/demo-flask-app:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository }}/flask-app:${{ env.VERSION }}
+          docker push ghcr.io/${{ github.repository }}/flask-app:latest
+          docker push ghcr.io/${{ github.repository }}/flask-app:${{ github.sha }}
 
     # FOR PUBLIC REPO
       # - name: Push Docker image to GHCR
       #   run: |
-      #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:latest
-      #     docker push ghcr.io/${{ github.repository_owner }}/demo-flask-app:${{ github.sha }}
+      #     docker push ghcr.io/${{ github.repository_owner }}/flask-app:latest
+      #     docker push ghcr.io/${{ github.repository_owner }}/flask-app:${{ github.sha }}
