--- a/deploy/helm/staging-values.yaml
+++ b/deploy/helm/staging-values.yaml
@@ -3,7 +3,7 @@ namespace: staging-portfolio-ci-cd
 replicaCount: 2
 
 image:
-  tag: staging
+  tag: "0.0.2-alpha.1"
 
 ingress:
   host: staging.flask-app.local
