--- a/deploy/helm/staging-values.yaml
+++ b/deploy/helm/staging-values.yaml
@@ -3,7 +3,7 @@ namespace: flask-app-staging
 replicaCount: 2
 
 image:
-  tag: "0.0.2-alpha.1"
+  tag: "0.0.2-beta.1"
 
 ingress:
   host: staging.flask-app.local
