--- a/deploy/helm/templates/analysis-template.yaml
+++ b/deploy/helm/templates/analysis-template.yaml
@@ -9,8 +9,8 @@ spec:
     - name: smoke-test
       provider:
         web:
-          url: "{{ .Values.smokeTestUrl }}"
+          url: "{{ .Values.smokeTest.url }}"
           method: GET
-          timeout: "10s"
+          timeout: "{{ .Values.smokeTest.timeout }}"
       successCondition: result.status == "healthy"
       failureCondition: result.status != "healthy"
