--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:  
   push:
-    branches: ["feature/**", "bugfix/**"]
+    branches: ["feature/**", "bugfix/**", "release-**"]
   pull_request:
-    branches: ["develop", "main"]
+    branches: ["main"]
 
 jobs:
   test:
